--- a/MapEditor/UnitTest/imgui.ini
+++ b/MapEditor/UnitTest/imgui.ini
@@ -38,3 +38,13 @@ Pos=1,622
 Size=283,90
 Collapsed=0
 
+[Window][Water]
+Pos=925,54
+Size=353,95
+Collapsed=0
+
+[Window][Ocean]
+Pos=925,149
+Size=354,152
+Collapsed=0
+
