--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,6 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
+MapEditor/UnitTest/imgui.ini
+MapEditor/ModelConv/Framework.lib
+MapEditor/UnitTest/Framework.lib
