--- a/MapEditor/Framework/Framework.vcxproj
+++ b/MapEditor/Framework/Framework.vcxproj
@@ -198,6 +198,7 @@ copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)ModelConv\"</Command>
     <ClInclude Include="Objects\Shadow.h" />
     <ClInclude Include="Particle\ParticleData.h" />
     <ClInclude Include="Particle\ParticleSystem.h" />
+    <ClInclude Include="PerlinCloud.h" />
     <ClInclude Include="Renders\Buffers.h" />
     <ClInclude Include="Renders\Context.h" />
     <ClInclude Include="Renders\DebugLine.h" />
@@ -272,6 +273,7 @@ copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)ModelConv\"</Command>
     <ClCompile Include="Objects\Projector.cpp" />
     <ClCompile Include="Objects\Shadow.cpp" />
     <ClCompile Include="Particle\ParticleSystem.cpp" />
+    <ClCompile Include="PerlinCloud.cpp" />
     <ClCompile Include="Renders\Buffers.cpp" />
     <ClCompile Include="Renders\Context.cpp" />
     <ClCompile Include="Renders\DebugLine.cpp" />
